<resources>
    <string name="app_name">Veg Food Order</string>
    <string name="designby_nvishal">DesignBy/nVishal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">Phone</string>
    <string name="Name">Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="address">Address</string>
    <string name="textview">TextView</string>
    <string name="cart">Cart</string>
    <string name="proceed">Proceed</string>
    <string name="recent_buy">Recent Buy</string>
    <string name="food_name">Food Name</string>
    <string name="_5">$5</string>
</resources>