<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@android:color/transparent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:background="@color/white"
    android:paddingEnd="16dp"
    tools:context=".fragment.profileFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/profile_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/artifika"
            android:gravity="center"
            android:text="Name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/artifika"
            android:hint="Enter Your Name"
            android:inputType="text"
            android:paddingStart="15dp"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/profile_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/artifika"
            android:gravity="center"
            android:text="@string/address"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/artifika"
            android:hint="Address"
            android:inputType="textMultiLine"
            android:paddingStart="15dp"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/profile_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/artifika"
            android:gravity="center"
            android:text="Email"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/artifika"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/profile_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/artifika"
            android:gravity="center"
            android:text="@string/phone"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/artifika"
            android:hint="Enter your phone"
            android:inputType="phone"
            android:paddingStart="15dp"
            android:textSize="20sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveinformation"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/loginbtn_bg"
        android:fontFamily="@font/artifika"
        android:text="Save Information"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>